# xml2doc

./: BUGS  Makefile.in  Makefile.old  README  TODO  VERSION  config.cache  configure  configure.in
doc/: Makefile  Makefile.in  README-en.xml  TAGS.xml  manpage.xml
examples/: Makefile  Makefile.in  align.xml  colors.xml  font.xml  images.xml  list.xml  manpage.xml  sep.xml
pkg/: README
pkg/debian/: control
pkg/gentoo/: xml2doc-20030501.ebuild
pkg/pkgsrc/: MESSAGE  Makefile  distinfo
src/: Makefile  Makefile.in  Makefile.old  defs.c  defs.h  main.c  main.h  output.h  output_doc.c  output_img.c  output_info.c  output_list.c  output_page.c  output_sep.c  output_t.c  papers.h  parm.c  parm.h  parse.c  parse_add.c  parse_bookmark.c  parse_default.c  parse_img.c  parse_include.c  parse_info.c  parse_list.c  parse_page.c  parse_sep.c  parse_t.c
